--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="./node_modules/editor/css/style.css" rel="stylesheet">
     <link href="./css/index.css" rel="stylesheet">
     <!-- 引入样式 -->
-    <link rel="stylesheet" href="./node_modules/element-ui/theme-chalk/index.css">
+    <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.8/lib/theme-chalk/index.css">
 </head>
 
 <body>
@@ -38,10 +38,13 @@
             </div>
         </div>
     </div>
-    <script src="./node_modules/vue/vue.js"></script>
-    <script src="./node_modules/axios/axios.min.js"></script>
+    <!-- 开发 -->
+    <!-- <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script> -->
+    <!-- 生产 -->
+    <script src="https://unpkg.com/vue@2.7.8/dist/vue.min.js"></script>
+    <script src="https://unpkg.com/axios@0.27.2/dist/axios.min.js"></script>
     <!-- 引入组件库 -->
-    <script src="./node_modules/element-ui/index.js"></script>
+    <script src="https://unpkg.com/element-ui@2.15.8/lib/index.js"></script>
 
     <script src="./node_modules/editor/index.js"></script>
     <script src="./node_modules/md5/md5.min.js"></script>
